[package]
name = "propaganda"
version = "0.1.0"
authors = ["Gilbert Roehrbein <gilbert.rohrbein@logmein.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { version = "1.0" }
async-std = { version = "1.6", features = ["attributes"] }
bincode = { version = "1.3" }
scraper = { version = "0.12" }
anyhow = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
surf = { version = "1.0" }
tide = { version = "0.13" }
sled = "0.34.3"
evmap = "10.0.2"
evmap-derive = "0.1.0"
prettydiff = "0.3.1"
itertools = "0.9.0"
futures = "0.3.5"
sqlx = { version = "0.3.5", features = ["sqlite"] }
async-trait = "0.1.40"
